<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		google_pixel_4__4xl___13
	 *	@date 		1613921086820
	 *	@title 		Google Pixel 4, 4XL  13
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/google_pixel_4__4xl___17" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_google_pixel_4__4xl___17_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/__bg__google_pixel_4__4xl___17_ek2"
					android:background="@drawable/__bg__google_pixel_4__4xl___17_ek2_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="412dp"
					android:layout_height="870dp" />

				<View android:id="@+id/rectangle_5_ek2"
					android:background="@drawable/rectangle_5_ek2_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="412dp"
					android:layout_height="870dp" />

				<ImageView android:id="@+id/path_3_ek2"
					android:src="@drawable/path_3_ek2"
					android:contentDescription="path_3_ek2"
					 android:layout_marginLeft="-154dp"
					 android:layout_marginStart="-154dp"
					android:layout_marginTop="-328dp"
					android:layout_width="719.36975097656dp"
					android:layout_height="719.36975097656dp" />

				<TextView android:id="@+id/juke_ek2"
					android:fontFamily="Gravesend Sans Inline"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="62sp"
					android:textColor="@color/juke_ek2_color"
					android:layout_marginLeft="111dp"
					android:layout_marginTop="105dp"
					android:layout_width="169dp"
					android:layout_height="87dp"
					android:text="@string/juke_ek2_string"
					 />

				<TextView android:id="@+id/brick_ek2"
					android:fontFamily="Gravesend Sans Inline"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="63sp"
					android:textColor="@color/juke_ek2_color"
					android:layout_marginLeft="97dp"
					android:layout_marginTop="159dp"
					android:layout_width="199dp"
					android:layout_height="89dp"
					android:text="@string/brick_ek2_string"
					 />

				<View android:id="@+id/rectangle_8"
					android:background="@drawable/rectangle_8_shape"
					 android:layout_marginLeft="55dp"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="410dp"
					android:layout_width="312dp"
					android:layout_height="90dp" />

				<View android:id="@+id/_rectangle_9"
					android:background="@drawable/_rectangle_9_shape"
					 android:layout_marginLeft="55dp"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="517dp"
					android:layout_width="302dp"
					android:layout_height="80dp" />

				<TextView android:id="@+id/room_pin"
					android:fontFamily="Proxima Nova"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="39sp"
					android:textColor="@color/juke_color"
					android:layout_marginLeft="115dp"
					android:layout_marginTop="428dp"
					android:layout_width="173dp"
					android:layout_height="52dp"
					android:text="@string/room_pin_string"
					 />

				<TextView android:id="@+id/enter"
					android:fontFamily="Proxima Nova"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="39sp"
					android:textColor="@color/juke_ek2_color"
					android:layout_marginLeft="154dp"
					android:layout_marginTop="535dp"
					android:layout_width="95dp"
					android:layout_height="52dp"
					android:text="@string/enter_string"
					 />

			</RelativeLayout>


			<View android:id="@+id/rectangle_10"
				android:background="@drawable/rectangle_10_shape"
				 android:layout_marginLeft="-764dp"
				 android:layout_marginStart="-764dp"
				android:layout_marginTop="-60dp"
				android:layout_width="8dp"
				android:layout_height="3dp" />

			<View android:id="@+id/rectangle_12"
				android:background="@drawable/rectangle_12_shape"
				 android:layout_marginLeft="618dp"
				 android:layout_marginStart="618dp"
				android:layout_marginTop="-1114dp"
				android:layout_width="3dp"
				android:layout_height="9dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>