<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		google_pixel_4__4xl___13
	 *	@date 		1613921086820
	 *	@title 		Google Pixel 4, 4XL  13
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/google_pixel_4__4xl___56" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >





			<RelativeLayout android:id="@+id/page_google_pixel_4__4xl___56_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__google_pixel_4__4xl___56_ek2"
					android:background="@drawable/_bg__google_pixel_4__4xl___56_ek2_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="412dp"
					android:layout_height="870dp" />

				<View android:id="@+id/rectangle_23"
					android:background="@drawable/rectangle_23_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="412dp"
					android:layout_height="871dp" />

				<View android:id="@+id/rectangle_5_ek3"
					android:background="@drawable/rectangle_5_ek3_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="486dp"
					android:layout_width="412dp"
					android:layout_height="387dp" />

				<ImageView android:id="@+id/image_7_ek1"
					android:src="@drawable/image_7_ek1"
					android:contentDescription="image_7_ek1"
					 android:layout_marginLeft="47dp"
					 android:layout_marginStart="47dp"
					android:layout_marginTop="64dp"
					android:layout_width="318dp"
					android:layout_height="318dp" />

				<ImageView android:id="@+id/mask_group_2_ek1"
					android:src="@drawable/mask_group_2_ek1"
					android:contentDescription="mask_group_2_ek1"
					 android:layout_marginLeft="56dp"
					 android:layout_marginStart="56dp"
					android:layout_marginTop="544dp"
					android:layout_width="146dp"
					android:layout_height="134dp" />

				<ImageView android:id="@+id/mask_group_4_ek1"
					android:src="@drawable/mask_group_4_ek1"
					android:contentDescription="mask_group_4_ek1"
					 android:layout_marginLeft="211dp"
					 android:layout_marginStart="211dp"
					android:layout_marginTop="544dp"
					android:layout_width="146dp"
					android:layout_height="134dp" />

				<ImageView android:id="@+id/mask_group_6_ek1"
					android:src="@drawable/mask_group_6_ek1"
					android:contentDescription="mask_group_6_ek1"
					 android:layout_marginLeft="56dp"
					 android:layout_marginStart="56dp"
					android:layout_marginTop="688dp"
					android:layout_width="146dp"
					android:layout_height="133dp" />

				<ImageView android:id="@+id/mask_group_8_ek1"
					android:src="@drawable/mask_group_8_ek1"
					android:contentDescription="mask_group_8_ek1"
					 android:layout_marginLeft="211dp"
					 android:layout_marginStart="211dp"
					android:layout_marginTop="688dp"
					android:layout_width="146dp"
					android:layout_height="133dp" />

				<TextView android:id="@+id/brick_house_ek1"
					android:fontFamily="Proxima Nova"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="39sp"
					android:textColor="@color/brick_house_color"
					android:layout_marginLeft="92dp"
					android:layout_marginTop="389dp"
					android:layout_width="219dp"
					android:layout_height="52dp"
					android:text="@string/brick_house_ek1_string"
					 />

				<TextView android:id="@+id/commodores_ek1"
					android:fontFamily="Proxima Nova"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:alpha="0.5"
					 android:textSize="21sp"
					android:textColor="@color/commodores_color"
					android:layout_marginLeft="138dp"
					android:layout_marginTop="431dp"
					android:layout_width="133dp"
					android:layout_height="27dp"
					android:text="@string/commodores_ek1_string"
					 />

				<ImageView android:id="@+id/path_45"
					android:src="@drawable/path_45"
					android:contentDescription="path_45"
					 android:layout_marginLeft="62dp"
					 android:layout_marginStart="62dp"
					android:layout_marginTop="751dp"
					android:layout_width="140.19750976562dp"
					android:layout_height="70.098510742188dp" />

				<ImageView android:id="@+id/path_46"
					android:src="@drawable/path_46"
					android:contentDescription="path_46"
					 android:layout_marginLeft="213dp"
					 android:layout_marginStart="213dp"
					android:layout_marginTop="751dp"
					android:layout_width="140.19750976562dp"
					android:layout_height="70.098510742188dp" />

				<ImageView android:id="@+id/path_47"
					android:src="@drawable/path_47"
					android:contentDescription="path_47"
					 android:layout_marginLeft="213dp"
					 android:layout_marginStart="213dp"
					android:layout_marginTop="608dp"
					android:layout_width="140.19750976562dp"
					android:layout_height="70.098510742188dp" />

				<ImageView android:id="@+id/path_40"
					android:src="@drawable/path_40"
					android:contentDescription="path_40"
					 android:layout_marginLeft="55dp"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="746dp"
					android:layout_width="146.83081054688dp"
					android:layout_height="74.698608398438dp" />

				<ImageView android:id="@+id/path_41"
					android:src="@drawable/path_41"
					android:contentDescription="path_41"
					 android:layout_marginLeft="210dp"
					 android:layout_marginStart="210dp"
					android:layout_marginTop="746dp"
					android:layout_width="146.83081054688dp"
					android:layout_height="74.698608398438dp" />

				<ImageView android:id="@+id/path_43"
					android:src="@drawable/path_43"
					android:contentDescription="path_43"
					 android:layout_marginLeft="210dp"
					 android:layout_marginStart="210dp"
					android:layout_marginTop="603dp"
					android:layout_width="146.83081054688dp"
					android:layout_height="74.698608398438dp" />

				<TextView android:id="@+id/_50_"
					android:fontFamily="Proxima Nova"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/another_brick_in_the_wall_color"
					android:layout_marginLeft="261dp"
					android:layout_marginTop="761dp"
					android:layout_width="45dp"
					android:layout_height="26dp"
					android:text="@string/_50__string"
					 />

				<TextView android:id="@+id/_25_"
					android:fontFamily="Proxima Nova"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/another_brick_in_the_wall_color"
					android:layout_marginLeft="262dp"
					android:layout_marginTop="618dp"
					android:layout_width="43dp"
					android:layout_height="26dp"
					android:text="@string/_25__string"
					 />

				<TextView android:id="@+id/_0_"
					android:fontFamily="Proxima Nova"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/another_brick_in_the_wall_color"
					android:layout_marginLeft="112dp"
					android:layout_marginTop="761dp"
					android:layout_width="33dp"
					android:layout_height="26dp"
					android:text="@string/_0__string"
					 />

				<View android:id="@+id/rectangle_21"
					android:background="@drawable/rectangle_21_shape"
					 android:layout_marginLeft="211dp"
					 android:layout_marginStart="211dp"
					android:layout_marginTop="688dp"
					android:layout_width="162dp"
					android:layout_height="149dp" />

				<TextView android:id="@+id/__old_yellow_bricks__is_leading"
					android:fontFamily="Proxima Nova"
					android:textStyle="bold"
					android:textSize="21sp"
					android:textColor="@color/vote_what_s_up_next__color"
					android:layout_marginLeft="56dp"
					android:layout_marginTop="510dp"
					android:layout_width="282dp"
					android:layout_height="27dp"
					android:text="@string/__old_yellow_bricks__is_leading_string"
					 />

				<TextView android:id="@+id/now_playing____ek1"
					android:fontFamily="Proxima Nova"
					android:textStyle="bold"
					android:alpha="0.5"
					 android:textSize="21sp"
					android:textColor="@color/commodores_color"
					android:layout_marginLeft="56dp"
					android:layout_marginTop="38dp"
					android:layout_width="140dp"
					android:layout_height="27dp"
					android:text="@string/now_playing____ek1_string"
					 />

				<ImageView android:id="@+id/path_44"
					android:src="@drawable/path_44"
					android:contentDescription="path_44"
					 android:layout_marginLeft="62dp"
					 android:layout_marginStart="62dp"
					android:layout_marginTop="608dp"
					android:layout_width="140.19750976562dp"
					android:layout_height="70.098510742188dp" />

				<ImageView android:id="@+id/path_42"
					android:src="@drawable/path_42"
					android:contentDescription="path_42"
					 android:layout_marginLeft="59dp"
					 android:layout_marginStart="59dp"
					android:layout_marginTop="603dp"
					android:layout_width="146.83081054688dp"
					android:layout_height="74.698608398438dp" />

				<TextView android:id="@+id/_25__ek1"
					android:fontFamily="Proxima Nova"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/another_brick_in_the_wall_color"
					android:layout_marginLeft="112dp"
					android:layout_marginTop="615dp"
					android:layout_width="43dp"
					android:layout_height="26dp"
					android:text="@string/_25__ek1_string"
					 />

			</RelativeLayout>


			<View android:id="@+id/rectangle_10"
				android:background="@drawable/rectangle_10_shape"
				 android:layout_marginLeft="-764dp"
				 android:layout_marginStart="-764dp"
				android:layout_marginTop="-60dp"
				android:layout_width="8dp"
				android:layout_height="3dp" />

			<View android:id="@+id/rectangle_12"
				android:background="@drawable/rectangle_12_shape"
				 android:layout_marginLeft="618dp"
				 android:layout_marginStart="618dp"
				android:layout_marginTop="-1114dp"
				android:layout_width="3dp"
				android:layout_height="9dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>